# PhraseRL

./: .flake8  .gitignore  README.md  pyproject.toml
configs/: cont.toml  disc.toml  rl.toml
phraserl/agents/: __init__.py  base_agent.py
phraserl/agents/seq2seq/: agent.py  model.py
phraserl/agents/template/: act_encoder.py  agent.py  model.py
phraserl/agents/template/scripts/: extract_templates.py
phraserl/agents/utils/: loader.py  multiwoz.py  reinforce.py
phraserl/scripts/: common.py  display_model.py  policy.py  test.py  train.py
phraserl/tasks/: __init__.py  base_task.py
phraserl/tasks/multiwoz/: evaluator.py  multiwoz.py
phraserl/tasks/multiwoz/original/: delexicalizer.py  evaluator.py  normalizer.py
phraserl/utils/: logging.py  metrics.py  recorder.py  vocab.py
