[tool.poetry]
name = "phraserl"
version = "0.1.0"
description = ""
authors = ["takatoy <takato@yamazaki.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.8"
nltk = "^3.4.5"
loguru = "^0.4.0"
toml = "^0.10.0"
attrdict = "^2.0.1"
tqdm = "^4.41.0"
jupyterlab = "^1.2.4"
svgwrite = "^1.4"
pandas = "^1.0.5"
ipywidgets = "^7.5.1"
hyperdash = "^0.15.3"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
ipynb-path = "^0.1.4"
torch = "^1.10.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"
pre-commit = "^1.20.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
